# multiple_choice_exam

./: .gitignore  CLAUDE.md  README.md
docs/superpowers/plans/: 2026-06-11-generator-qr-both-sheets.md  2026-06-11-grader-camera-ui.md  2026-06-11-grader-core.md  2026-06-11-grader-grade-recording.md  (+5 more)
examples/: sample-exam.md
generator/: pyproject.toml
generator/scripts/: make_test_vectors.py
generator/src/mcexam/: __init__.py  cli.py  keyfile.py  model.py  parser.py  qr.py  render.py  rng.py  scramble.py  select.py  validator.py
generator/src/mcexam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
generator/tests/: samples.py  test_cli.py  test_keyfile.py  test_package.py  test_parser.py  test_qr.py  test_render.py  test_rng.py  test_round_trip.py  test_scramble.py  test_select.py  test_validator.py  test_vectors.py
grader/: README.md  pubspec.yaml
grader/lib/: capture_sheet_screen.dart  framing.dart  grading.dart  keyfile.dart  main.dart  omr.dart  qr_scan.dart  records.dart  records_screen.dart  result_screen.dart  rng.dart  scan_qr_screen.dart  select.dart  session.dart  sheet_geometry.dart  sheet_guide_overlay.dart  sheet_render.dart
grader/test/: framing_test.dart  grading_test.dart  keyfile_test.dart  omr_fixture_test.dart  omr_grading_integration_test.dart  omr_test.dart  qr_scan_test.dart  records_test.dart  rng_test.dart  select_test.dart  session_test.dart  sheet_builder.dart  sheet_geometry_test.dart  sheet_guide_overlay_test.dart  sheet_render_test.dart  widget_test.dart
shared/: test-vectors.json
(+6 files in other folders)
